--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,33 @@ h2 {
   margin: 0;
 }
 
+.slick-dots {
+  position: absolute;
+  right: 0;
+  bottom: 5px;
+  display: block;
+  width: auto;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+}
+
+.slick-dots li button:before {
+  box-sizing: border-box;
+  content: "";
+  border-radius: 50%;
+  border: 2px solid #262732d5;
+  box-shadow: 0 0 0px 3px #ffffff;
+}
+
+.slick-dots li.slick-active button:before {
+  background-color: #fc5f45;
+  border: 4px solid #262732d5;
+  box-shadow: 0 0 0px 3px #fc5f45;
+  opacity: 1;
+}
+
 /* Header */
 header {
   position: absolute;
@@ -919,7 +946,33 @@ main .stats {
   font-size: 13px;
   font-family: "poppins-medium";
   color: #fc5f45;
+}
+
+.slick-dots {
+  position: absolute;
+  right: 0;
+  bottom: 5px;
+  display: block;
+  width: auto;
+  padding: 0;
   margin: 0;
+  list-style: none;
+  text-align: center;
+}
+
+.slick-dots li button:before {
+  box-sizing: border-box;
+  content: "";
+  border-radius: 50%;
+  border: 2px solid #262732d5;
+  box-shadow: 0 0 0px 3px #ffffff;
+}
+
+.slick-dots li.slick-active button:before {
+  background-color: #fc5f45;
+  border: 4px solid #262732d5;
+  box-shadow: 0 0 0px 3px #fc5f45;
+  opacity: 1;
 }
 
 /*main select*/
@@ -1220,21 +1273,25 @@ main .stats {
   flex-direction: column;
   align-items: center;
   position: relative;
+  padding: 143px 0 0;
 }
 
-.contact .container > img {
-  position: absolute;
+.contact .container .number-block {
+  top: -25px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  line-height: 1;
 }
 
 .contact .container > h2 {
   font-family: "LibreBaskerville-Bold";
-  margin-top: 143px;
   font-size: 50px;
   text-align: center;
   margin-bottom: 7px;
 }
 
-.contact .container > p {
+.contact p {
   font-size: 19px;
   text-align: center;
   font-family: "poppins-regular";
@@ -1291,7 +1348,7 @@ main .stats {
 }
 
 footer {
-  padding: 50px 0;
+  padding: 50px 0 0;
   background-color: #c0c0c0;
 }
 
@@ -1348,7 +1405,7 @@ footer div p {
 
 .footer-block-four a {
   display: inline-block;
-  margin: 0 15px;
+  margin: 0 5px;
 }
 
 @media only screen and (min-width: 100px) and (max-width: 960px) {
