--- a/css/style.css
+++ b/css/style.css
@@ -1425,6 +1425,7 @@ footer div p {
     min-height: 70px;
     height: max-content;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+    z-index: 2;
   }
 
   header div > a {
@@ -1444,6 +1445,7 @@ footer div p {
     position: absolute;
     top: 21px;
     right: 25px;
+    z-index: 12;
   }
 
   .nav_icon:after,
@@ -1708,6 +1710,21 @@ footer div p {
   .select-grid div {
     width: 244px;
     margin: 0 auto;
+    padding: 39px 60px 0px;
+  }
+
+  .select-grid img {
+    top: 0;
+    left: 0;
+  }
+
+  .select-grid h3 {
+    top: 0;
+    left: 0px;
+  }
+
+  .select .container {
+    padding: 150px 0 0px;
   }
 
   .select span {
