--- a/css/style.css
+++ b/css/style.css
@@ -1810,6 +1810,7 @@ footer div p {
     box-sizing: border-box;
     padding: 33px;
     width: 100vw;
+    padding-top: 120px;
   }
 
   .slick-dots {
