--- a/css/style.css
+++ b/css/style.css
@@ -1800,6 +1800,7 @@ footer div p {
   }
 
   .slide-promo img {
+    position: absolute;
     border-radius: 50%;
     margin: 0 auto;
     width: 25vw;
@@ -1810,7 +1811,7 @@ footer div p {
     box-sizing: border-box;
     padding: 33px;
     width: 100vw;
-    padding-top: 120px;
+    padding-top: 27vw;
   }
 
   .slick-dots {
